[project]
name = "incident-commander-openenv"
version = "0.1.0"
description = "OpenEnv RL environment"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"